website/website-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: sten-heimbrodt.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website-service
            port:
              number: 80
  - host: www.sten-heimbrodt.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website-service
            port:
              number: 80
  tls:
  - hosts:
    - sten-heimbrodt.de
